--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/Theme.Pizzashevtsovshift2025"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".StartActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Pizzashevtsovshift2025">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
